--- a/src/main/resources/templates/client/show.html
+++ b/src/main/resources/templates/client/show.html
@@ -80,8 +80,7 @@
                                     <!--General-info-->
                                     <li class="nav-item">
                                         <button id="btn-general-info" class="btn nav-link active"
-                                                onclick="showCard('#btn-general-info', ['#general-info'],
-                                           ['#personal-info', '#contact-info'])">
+                                                onclick="showGeneralInfo()">
                                             <span th:text="#{client.general.information}"></span>
                                         </button>
                                     </li>
@@ -89,8 +88,7 @@
                                     <!--Contacts-->
                                     <li class="nav-item">
                                         <button id="btn-contacts" class="btn nav-link"
-                                                onclick="showCard('#btn-contacts', ['#contact-info'],
-                                           ['#general-info', '#personal-info'])">
+                                                onclick="showContactInfo()">
                                             <span th:text="#{client.contact.information}"></span>
                                         </button>
                                     </li>
@@ -98,8 +96,7 @@
                                     <!--Personal-info-->
                                     <li class="nav-item">
                                         <button id="btn-personal-info" class="btn nav-link"
-                                                onclick="showCard('#btn-personal-info', ['#personal-info'],
-                                           ['#general-info', '#contact-info'])">
+                                                onclick="showPersonalInfo()">
                                             <span th:text="#{client.private.information}"></span>
                                         </button>
                                     </li>
@@ -281,7 +278,8 @@
                                     <div class="form-row">
                                         <div class="form-group col-md-8"></div>
                                         <div class="form-group col-md-4">
-                                            <button class="btn btn-primary float-right" onclick="saveGeneralInfo()">
+                                            <button class="btn btn-primary float-right"
+                                                    onclick="showContactInfo()">
                                                 <span th:text="#{btn.next}"></span>
                                                 <i class="fas fa-arrow-right"></i>
                                             </button>
@@ -442,7 +440,8 @@
                                     <div class="form-row">
                                         <div class="form-group col-md-8"></div>
                                         <div class="form-group col-md-4">
-                                            <button class="btn btn-primary float-right" onclick="saveContactInfo()">
+                                            <button class="btn btn-primary float-right"
+                                                    onclick="showPersonalInfo()">
                                                 <span th:text="#{btn.next}"></span>
                                                 <i class="fas fa-arrow-right"></i>
                                             </button>
@@ -693,18 +692,6 @@
                                                    th:text="#{client.is.disabled}"></label>
                                         </div>
                                     </section>
-
-                                    <!--Next-->
-                                    <!--                                    <div class="form-row">-->
-                                    <!--                                        <div class="form-group col-md-8"></div>-->
-                                    <!--                                        <div class="form-group col-md-4">-->
-                                    <!--                                            <button class="btn btn-lg btn-success float-right"-->
-                                    <!--                                                    onclick="savePersonalInfo()">-->
-                                    <!--                                                <i class="fas fa-save"></i>-->
-                                    <!--                                                <span th:text="#{btn.save}"></span>-->
-                                    <!--                                            </button>-->
-                                    <!--                                        </div>-->
-                                    <!--                                    </div>-->
                                 </div>
                             </div>
 
