--- a/src/main/resources/templates/client/create.html
+++ b/src/main/resources/templates/client/create.html
@@ -22,30 +22,24 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/}"><span th:text="#{nav.home}"></span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/worker/profile}"><span th:text="#{nav.profile}"></span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link active dropdown-toggle scroll-top" role="button"
-                           data-toggle="dropdown"><span th:text="#{nav.clients}"></span>
+                        <a class="nav-link" th:href="@{/}">
+                            <span th:text="#{nav.home}"></span>
                         </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item"
-                               th:text="#{nav.clients.show}" th:href="@{/client}"></a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" target="_blank"
-                               th:text="#{nav.clients.create}" th:href="@{/client/create}"></a>
-                            <a class="dropdown-item"
-                               th:text="#{nav.clients.edit}" th:href="@{/client/edit}"></a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item"
-                               th:text="#{nav.clients.delete}" th:href="@{/client/delete}"></a>
-                        </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/operations}"><span th:text="#{nav.actions}"></span></a>
+                        <a class="nav-link" th:href="@{/worker/profile}">
+                            <span th:text="#{nav.profile}"></span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active scroll-top" th:href="@{/client}">
+                            <span th:text="#{nav.clients}"></span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/operations}">
+                            <span th:text="#{nav.actions}"></span>
+                        </a>
                     </li>
                 </ul>
                 <div class="logout">
@@ -224,7 +218,7 @@
                                                 <label for="txt-income-per-mouth"
                                                        th:text="#{label.income.per.month} + ':'"></label>
                                                 <input type="number" class="form-control" id="txt-income-per-mouth"
-                                                       th:placeholder="#{placeholder.income.per.month}"/>
+                                                       th:placeholder="#{placeholder.income.byn}"/>
                                             </div>
                                         </div>
                                     </section>
@@ -271,7 +265,7 @@
                                             <!--City-->
                                             <div class="form-group col-md-6">
                                                 <label for="txt-living-address-city"
-                                                       th:text="#{label.input.city}">City</label>
+                                                       th:text="#{label.input.city} + ':'">City</label>
                                                 <input type="text" class="form-control"
                                                        id="txt-living-address-city"
                                                        th:placeholder="#{placeholder.input.city}">
@@ -366,7 +360,8 @@
                                                 <label for="txt-email"
                                                        th:text="#{label.input.email} + ':'"></label>
                                                 <input type="email" class="form-control" id="txt-email"
-                                                       th:placeholder="#{placeholder.input.email}"/>
+                                                       th:placeholder="#{placeholder.input.email}"
+                                                       onblur="validateEmail()"/>
                                             </div>
                                         </div>
                                         <div class="input-group mb-3">
@@ -407,7 +402,8 @@
                                                 <label for="txt-passport-id"
                                                        th:text="#{label.input.passport.id} + ':'"></label>
                                                 <input type="text" class="form-control" id="txt-passport-id"
-                                                       th:placeholder="#{placeholder.input.passport.id}"/>
+                                                       th:placeholder="#{placeholder.input.passport.id}"
+                                                       onblur="validatePassportId()"/>
                                             </div>
                                         </div>
 
@@ -418,7 +414,8 @@
                                                 <label for="txt-passport-series"
                                                        th:text="#{label.input.passport.series} + ':'"></label>
                                                 <input type="text" class="form-control" id="txt-passport-series"
-                                                       th:placeholder="#{placeholder.input.passport.series}"/>
+                                                       th:placeholder="#{placeholder.input.passport.series}"
+                                                       onblur="validatePassportSeries()"/>
                                             </div>
 
                                             <!--Passport number-->
@@ -426,7 +423,8 @@
                                                 <label for="txt-passport-number"
                                                        th:text="#{label.input.passport.number}"></label>
                                                 <input type="number" class="form-control" id="txt-passport-number"
-                                                       th:placeholder="#{placeholder.input.passport.number}"/>
+                                                       th:placeholder="#{placeholder.input.passport.number}"
+                                                       onblur="validatePassportNumber()"/>
                                             </div>
 
                                         </div>
@@ -606,7 +604,7 @@
                                         <div class="form-group col-md-8"></div>
                                         <div class="form-group col-md-4">
                                             <button class="btn btn-lg btn-success float-right"
-                                                    onclick="validatePersonalInfo(); saveClient(); savePersonalInfo()">
+                                                    onclick="validatePersonalInfo(); savePersonalInfo(); saveClient()">
                                                 <i class="fas fa-save"></i>
                                                 <span th:text="#{btn.save}"></span>
                                             </button>
